# DEBS-2013-soccer-monitoring

./: .gitignore  CMakeLists.txt  README.md
datasets/: README.md
datasets/original/: README.md  metadata.txt
datasets/original/referee-events/Ball Possession/1st Half/: Ben Muller.csv
datasets/original/referee-events/Ball Possession/2nd Half/: Ben Muller.csv  Ben MÃ¼ller.csv  Christopher Lee.csv  Dennis Dotterweich.csv  Erik Engelhardt.csv  Kevin Baer.csv  Leo Langhans.csv  Leon Heinze.csv  Leon Krapf.csv  Luca Ziegler.csv  Nick Gertje.csv  Niklas Welzlein.csv  Philipp Harlass.csv  Roman Hartleb.csv  Sandro Schneider.csv  Vale Reitstetter.csv  Willi Sommer.csv
datasets/original/referee-events/Shot on Goal/: 2nd Half.csv
datasets/preprocessed/: README.md  perform_preprocessing.py  preprocess_ball_possession.py  preprocess_full_game.py  preprocess_metadata.py
datasets/utils/: generate_test_dataset.py
docs/: README.md  speedup_analysis.ipynb
docs/design_document/: main.tex
include/: batch.hpp  context.hpp  distance.hpp  event.hpp  event_fetcher.hpp  game_statistics.hpp  metadata.hpp  placeholder.h  position.hpp  soccer_monitoring.hpp  stream_types.hpp  visualizer.hpp
include/details/: distance_impl.hpp  event_fetcher_impl.hpp  game_statistics_impl.hpp  visualizer_impl.hpp
script/: bootstrap.sh  build_debug.sh  build_profile.sh  build_release.sh
src/: context.cpp  event.cpp  event_fetcher.cpp  game_statistics.cpp  main.cpp  metadata.cpp  position.cpp  soccer_monitoring.cpp  visualizer.cpp
src/details/: event_fetcher_impl.cpp  game_statistics_impl.cpp  visualizer_impl.cpp
test/: hello.cpp  metadata_test.cpp  test_dataset.hpp  test_distance.cpp  test_event_fetcher.cpp  test_game_statistics.cpp  test_metadata.cpp  test_visualizer.cpp
